force-app/main/default/objects/ssot__ApplicationTimeline__dlm/fields/ssot__ApplicationCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationCloseDate__c</fullName>
    <label>Application Close Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationCloseDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>