force-app/main/default/objects/ssot__ApplicationTimeline__dlm/fields/ssot__EarlyActionOpenDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EarlyActionOpenDate__c</fullName>
    <label>Early Action Open Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EarlyActionOpenDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>