force-app/main/default/objects/ssot__ApplicationTimeline__dlm/fields/ssot__EarlyApplicationCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EarlyApplicationCloseDate__c</fullName>
    <label>Early Application Close Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EarlyApplicationCloseDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>