force-app/main/default/objects/ssot__ApplicationTimeline__dlm/fields/ssot__EarlyApplicationOpenDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EarlyApplicationOpenDate__c</fullName>
    <label>Early Application Open Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EarlyApplicationOpenDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>