force-app/main/default/objects/ssot__ApplicationTimeline__dlm/fields/ssot__EarlyApplnDecisionRelDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EarlyApplnDecisionRelDate__c</fullName>
    <label>Early Application Decision Release Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EarlyApplnDecisionRelDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>