force-app/main/default/objects/ssot__ApplicationTimeline__dlm/fields/ssot__GraduationApplnDeadlineDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__GraduationApplnDeadlineDate__c</fullName>
    <label>Graduation Application Deadline</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GraduationApplnDeadlineDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>